2007-03-28  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice_json.js: Fixed async JSON 
	context object callback mechanism problem.

2007-03-26  Martin Leidig  <mleidig@schlund.de>

	Added new JUnit version, made tests work from commandline too,
	added concurrency test for TargetGenerator.

	* .classpath
	* tests/junit/de/schlund/pfixcore/webservice/beans/BeanDescriptorTest.java
	* tests/junit/de/schlund/pfixxml/multipart/RFC822HeadersTest.java
	* tests/junit/de/schlund/pfixxml/targets/TargetGeneratorTest.java
	* lib/junit-4.3.jar: added
	* lib/junit-3.8.1.jar: removed

2007-03-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/util/email/EmailSender.java: 
	* src/de/schlund/pfixcore/util/email/EmailSenderException.java: 
	Implemented support for SMTP authentication and TLS.

2007-03-16  Martin Leidig  <mleidig@schlund.de>

	Added new IWrapper definition attribute 'implements', which
	produces an according 'implements' declaration in the generated 
	class and can be used to tag IWrappers, e.g. for common handling
	of IWrappers which can't have a common base class, but have a
	set of common fields, which should be handled by the same method.

	* projects/core/build/iwrapper.xsl
	* projects/core/schema/interfacewrapper200401.xsd

2007-03-16  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/core/dom/IncludePartThemeVariant.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/internal/CommonIncludePartThemeVariantImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/handlers/CommonUploadIncludePartHandler.java: 
	* src/de/schlund/pfixcore/editor2/frontend/resources/CommonIncludesResource.java: 
	* src/de/schlund/pfixcore/editor2/frontend/resources/CommonIncludesResourceImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/wrappers/CommonUploadIncludePart.iwrp: 
	* projects/core/editor2/txt/util_includes.xml: 
	Added "preserve format" option to editor.
