@@ -1,3 +1,8 @@
+2007-03-29  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/workflow/ContextResourceManager.java: Added
+	generic getResource method (saves getName call and casting)
+
 2007-03-28  Martin Leidig  <mleidig@schlund.de>
 
 	* projects/core/script/webservice_json.js: Fixed async JSON 
